se agregaron cambios

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,19 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Noto+Sans+JP:wght@100..900&display=swap');
 body {
-    background: orange;
-
+    background: green;
 }
 
-h1,h2{
-    font-family: "Noto Sans JP", sans-serif;
+h1,h2 {
+    font-family: 'Noto Sans JP', sans-serif;
+
 }
+p{
+    font-family: 'Bitcount Grid Double Ink', cursive;
+}
+
 
 header {
     text-align: center;
-    border-bottom: solid 6px blue;
+    border-bottom: solid 4px blue;
     margin-bottom: 50px;
-    /*Margen externo*/
-
-
+    padding: 20px;
+}
+#foto-perfil{
+    border:solid blue 2px;
+}
+article{
+    border:solid red 2px;
+    width: 30%;
+    float: left;
 }
